--- a/basics/basics_(need).ipynb
+++ b/basics/basics_(need).ipynb
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d9e03102",
+   "id": "83b77c1f",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "cc502017",
+   "id": "a0098bb4",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a70d485a",
+   "id": "40d7a740",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "61f63c6a",
+   "id": "522bdf93",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c59a5864",
+   "id": "6e84e665",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "991c59c9",
+   "id": "565779f3",
    "metadata": {},
    "source": [
     "\n",
@@ -570,20 +570,20 @@
     "# Your solution here\n",
     "1. print('Hello world!') parentheses follow after a function\n",
     "2. writing comments by adding # before the line\n",
-    "3. = means equal\n",
-    "4. == is to check if the left hand side is equal to the right hand side\n",
+    "3. `=` means equal\n",
+    "4. `==` is to check if the left hand side is equal to the right hand side\n",
     "5. if statement requires : and indentations to define the conditions for True and False\n",
-    "6. putting an indentation before print() function makes the code not able to work\n",
+    "6. putting an indentation before `print()` function makes the code not able to work\n",
     "7. storing information in variables and extracting them using functions\n",
-    "8. *\\' is a single quote*\n",
-    "9. *\\\\ is a backslash*\n",
-    "10. *\\n is a newline*\n",
-    "11. *\\t is a horizontal tab*\n",
-    "12. Python uses [] for lists of data\n",
-    "13. *Python uses {} to store data that use a key to identify a value, where the storing of data is called a dictionary*\n",
+    "8. *`\\'` is a single quote*\n",
+    "9. *`\\\\` is a backslash*\n",
+    "10. *`\\n` is a newline*\n",
+    "11. *`\\t` is a horizontal tab*\n",
+    "12. Python uses `[]` for lists of data\n",
+    "13. *Python uses `{}` to store data that use a key to identify a value, where the storing of data is called a dictionary*\n",
     "14. import packages\n",
     "15. loading packages with an alias\n",
-    "16. *dot indicates ownership*"
+    "16. *`.` indicates ownership*"
    ]
   },
   {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0285f066",
+   "id": "88f3826f",
    "metadata": {},
    "source": [
     "\n",
@@ -641,7 +641,7 @@
     "|3|Comments|Information at the side for personal reference which will not be part of the output|\n",
     "|4|Indentions|spaces which can be use for True or False 'blocks' for example|\n",
     "|5|Packages|additional tools that can be imported|\n",
-    "|6|.|it indicates ownership|\n",
+    "|6|`.`|it indicates ownership|\n",
     "\n"
    ]
   },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e2ff7a5a",
+   "id": "03355877",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d2f65bcc",
+   "id": "031bf27c",
    "metadata": {},
    "outputs": [
     {
