--- a/basics/basics_(need).ipynb
+++ b/basics/basics_(need).ipynb
@@ -572,7 +572,7 @@
     "2. writing comments by adding # before the line\n",
     "3. `=` means equal\n",
     "4. `==` is to check if the left hand side is equal to the right hand side\n",
-    "5. if statement requires : and indentations to define the conditions for True and False\n",
+    "5. if statement requires `:` and indentations to define the conditions for True and False\n",
     "6. putting an indentation before `print()` function makes the code not able to work\n",
     "7. storing information in variables and extracting them using functions\n",
     "8. *`\\'` is a single quote*\n",
