--- a/storing data/storing_data_(need).ipynb
+++ b/storing data/storing_data_(need).ipynb
@@ -76,7 +76,7 @@
    "id": "11aad315",
    "metadata": {},
    "source": [
-    "Dictionaries use a key and associated value separated by a :\n",
+    "Dictionaries use a key and associated value separated by a `:`\n",
     "Others:\n",
     "1. choose any name for variables: py and np are just suggestions\n",
     "2. \"arrays\" = \"NumPy arrays\"\n",
@@ -1015,8 +1015,12 @@
    "id": "37728480",
    "metadata": {},
    "source": [
-    "1. One prominent difference between lists and arrays is that arrays like having a single data type; lists are more accommodating. \n",
-    "\n"
+    "1. Two similarities between lists and arrays\n",
+    "- One prominent difference between lists and arrays is that arrays like having a single data type; lists are more accommodating. \n",
+    "\n",
+    "2. Two differences between lists and arrays\n",
+    "\n",
+    "3. What is a dictionary?\n"
    ]
   },
   {
@@ -1029,17 +1033,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4bd5319c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1\n",
+      "c3\n",
+      "e5\n",
+      "g7\n",
+      "i9\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# Your solution here\n",
-    "\n",
-    "\n"
+    "py_list = [\"a1\", \"b2\", \"c3\", \"d4\", \"e5\", \"f6\", \"g7\", \"h8\", \"i9\", \"j10\"]\n",
+    "print(py_list[0])   # Prints 'a1'\n",
+    "print(py_list[2])   # Prints 'c3'\n",
+    "print(py_list[4])   # Prints 'e5'\n",
+    "print(py_list[6])   # Prints 'g7'\n",
+    "print(py_list[8])   # Prints 'i9'\n"
    ]
   },
   {
@@ -1061,7 +1078,12 @@
     "\n",
     "\n",
     "# Your solution here\n",
+    "superhero_info = {\"Natasha Romanoff\": \"Black Widow\",\n",
+    "                  \"Tony Stark\": \"Iron Man\",\n",
+    "                  \"Stephen Strange\": \"Doctor Strange\"\n",
+    "                  }\n",
     "\n",
+    "superhero_info['Tony Stark'] = superhero_info['Tony Stark'].upper()                  \n",
     "\n"
    ]
   },
@@ -1075,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "716d4174",
    "metadata": {},
    "outputs": [],
@@ -1084,8 +1106,12 @@
     "\n",
     "\n",
     "# Your solution here\n",
-    "\n",
-    "\n"
+    "numbers=[45, 60, 1, 30, 96, 1, 96, 57, 16, 1,\n",
+    "        99, 62, 86, 43, 42, 60, 59, 1, 1, 35,\n",
+    "        83, 47, 34, 28, 68, 23, 22, 92, 1, 79,\n",
+    "        1, 29, 94, 72, 46, 47, 1, 74, 32, 20,\n",
+    "        8, 37, 35, 1, 89, 29, 86, 19, 43, 61]                 \n",
+    "numbers_np_array = np.array(numbers)"
    ]
   }
  ],
