--- a/basics/basics_(good).ipynb
+++ b/basics/basics_(good).ipynb
@@ -808,35 +808,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "3c9f60e0",
+   "execution_count": 29,
+   "id": "0a7ddf84",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Aqua Man!\n"
+      "Hello BATMAN!\n",
+      "Hello BLACK WIDOW!\n",
+      "Hello aqua man!\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "# Your solution here\n",
-    "name = \"Aqua Man\"\n",
-    "if name == \"Batman\":\n",
-    "    print(f\"Hello {name.upper()}!\")\n",
-    "elif name == \"Black Widow\":\n",
-    "    print(f\"Hello {name.upper()}!\")\n",
-    "else:\n",
-    "    print(f\"Hello {name}!\")\n"
+    "def hello(name):   \n",
+    "    if name == \"Batman\":\n",
+    "        print(f\"Hello {name.upper()}!\")\n",
+    "    elif name == \"Black Widow\":\n",
+    "        print(f\"Hello {name.upper()}!\")\n",
+    "    else:\n",
+    "        print(f\"Hello {name.lower()}!\")\n",
+    "hello(\"Batman\")\n",
+    "hello(\"Black Widow\")\n",
+    "hello(\"Aqua Man\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "id": "b426d066",
    "metadata": {},
    "outputs": [
@@ -844,16 +845,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Aqua Man!\n"
+      "Hello BATMAN!\n",
+      "Hello BLACK WIDOW!\n",
+      "Hello aqua man!\n"
      ]
     }
    ],
    "source": [
-    "name = \"Aqua Man\"\n",
-    "if name == \"Batman\" or name == \"Black Widow\":\n",
-    "    print(f\"Hello {name.upper()}!\")\n",
-    "else:\n",
-    "    print(f\"Hello {name}!\")"
+    "def hello(name):\n",
+    "    if name == \"Batman\" or name == \"Black Widow\":\n",
+    "        print(f\"Hello {name.upper()}!\")\n",
+    "    else:\n",
+    "        print(f\"Hello {name.lower()}!\")\n",
+    "hello(\"Batman\")\n",
+    "hello(\"Black Widow\")\n",
+    "hello(\"Aqua Man\")"
    ]
   },
   {
@@ -866,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "id": "21ffd174",
    "metadata": {},
    "outputs": [
@@ -874,22 +880,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Hello BATMAN!\n",
+      "Hello BLACK WIDOW!\n",
+      "Hello aqua man!\n",
       "Hello BATMAN!\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# Your solution here\n",
-    "name = \"batMan\"\n",
-    "if name == \"Batman\":\n",
-    "    print(f\"Hello {name.upper()}!\")\n",
-    "elif name == \"Black Widow\":\n",
-    "    print(f\"Hello {name.upper()}!\")\n",
-    "else:\n",
-    "    print(f\"Hello {name.upper()}!\")\n"
+    "def hello(name):   \n",
+    "    if name.upper() == \"BATMAN\":\n",
+    "        print(f\"Hello {name.upper()}!\")\n",
+    "    elif name.lower() == \"black widow\":\n",
+    "        print(f\"Hello {name.upper()}!\")\n",
+    "    else:\n",
+    "        print(f\"Hello {name.lower()}!\")\n",
+    "hello(\"Batman\")\n",
+    "hello(\"Black Widow\")\n",
+    "hello(\"Aqua Man\")\n",
+    "hello(\"batMan\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "58bc252c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello BATMAN!\n",
+      "Hello BLACK WIDOW!\n",
+      "Hello aqua man!\n",
+      "Hello BATMAN!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello(name):   \n",
+    "    if name.upper() == \"BATMAN\":\n",
+    "        print(f\"Hello BATMAN!\")\n",
+    "    elif name.lower() == \"black widow\":\n",
+    "        print(f\"Hello BLACK WIDOW!\")\n",
+    "    else:\n",
+    "        print(f\"Hello {name.lower()}!\")\n",
+    "hello(\"Batman\")\n",
+    "hello(\"Black Widow\")\n",
+    "hello(\"Aqua Man\")\n",
+    "hello(\"batMan\")"
    ]
   },
   {
@@ -915,9 +956,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# Your solution here\n",
     "old = 'The Joker lives in Gotham City'\n",
     "new_string = old.replace(\"Joker\", \"Batman\")\n",
