--- a/storing data/storing_data_(need).ipynb
+++ b/storing data/storing_data_(need).ipynb
@@ -1016,11 +1016,15 @@
    "metadata": {},
    "source": [
     "1. Two similarities between lists and arrays\n",
-    "- One prominent difference between lists and arrays is that arrays like having a single data type; lists are more accommodating. \n",
+    "- `len()` function could be used to check the number of elements in the lists and arrays.\n",
+    "- when accessing or retrieving data in lists and arrays, the index corresponding to the data's position needs to be used.\n",
     "\n",
     "2. Two differences between lists and arrays\n",
+    "- *multiplying numbers to lists will create a longer lists while multiplying numbers to arrays will multiply the number to each of the value inside the array.*\n",
+    "- *adding lists together will result in a longer list while adding arrays together will add the corresponding values together.*\n",
     "\n",
-    "3. What is a dictionary?\n"
+    "3. What is a dictionary?\n",
+    "- *A dictionary consists of a collection of key-value pairs where each key-value pair maps the key to the associated value.*\n"
    ]
   },
   {
@@ -1069,14 +1073,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4a3b6458",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Natasha Romanoff': 'BLACK WIDOW', 'Tony Stark': 'IRON MAN', 'Stephen Strange': 'DOCTOR STRANGE'}\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# Your solution here\n",
     "superhero_info = {\"Natasha Romanoff\": \"Black Widow\",\n",
     "                  \"Tony Stark\": \"Iron Man\",\n",
@@ -1084,7 +1093,9 @@
     "                  }\n",
     "\n",
     "superhero_info['Tony Stark'] = superhero_info['Tony Stark'].upper()                  \n",
-    "\n"
+    "superhero_info['Natasha Romanoff'] = superhero_info['Natasha Romanoff'].upper()\n",
+    "superhero_info['Stephen Strange'] = superhero_info['Stephen Strange'].upper()\n",
+    "print(superhero_info)"
    ]
   },
   {
@@ -1097,21 +1108,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "716d4174",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# Your solution here\n",
+    "\n",
+    "# Use a NumPy array\n",
+    "# Ask a question\n",
+    "# False is considered 0, and True is considered 1 by sum()\n",
+    "# determine number of 1's in the list\n",
+    "\n",
     "numbers=[45, 60, 1, 30, 96, 1, 96, 57, 16, 1,\n",
     "        99, 62, 86, 43, 42, 60, 59, 1, 1, 35,\n",
     "        83, 47, 34, 28, 68, 23, 22, 92, 1, 79,\n",
     "        1, 29, 94, 72, 46, 47, 1, 74, 32, 20,\n",
     "        8, 37, 35, 1, 89, 29, 86, 19, 43, 61]                 \n",
-    "numbers_np_array = np.array(numbers)"
+    "numbers_np_array = np.array(numbers)\n",
+    "numbers_np_array == 1\n",
+    "sum([False, False,  True, False, False,  True, False, False, False,\n",
+    "        True, False, False, False, False, False, False, False,  True,\n",
+    "        True, False, False, False, False, False, False, False, False,\n",
+    "       False,  True, False,  True, False, False, False, False, False,\n",
+    "        True, False, False, False, False, False, False,  True, False,\n",
+    "       False, False, False, False, False])"
    ]
   }
  ],
