--- a/storing data/storing_data_(need).ipynb
+++ b/storing data/storing_data_(need).ipynb
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "716d4174",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1118,7 @@
        "9"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,15 +1135,9 @@
     "        99, 62, 86, 43, 42, 60, 59, 1, 1, 35,\n",
     "        83, 47, 34, 28, 68, 23, 22, 92, 1, 79,\n",
     "        1, 29, 94, 72, 46, 47, 1, 74, 32, 20,\n",
-    "        8, 37, 35, 1, 89, 29, 86, 19, 43, 61]                 \n",
+    "        8, 37, 35, 1, 89, 29, 86, 19, 43, 61]  \n",
     "numbers_np_array = np.array(numbers)\n",
-    "numbers_np_array == 1\n",
-    "sum([False, False,  True, False, False,  True, False, False, False,\n",
-    "        True, False, False, False, False, False, False, False,  True,\n",
-    "        True, False, False, False, False, False, False, False, False,\n",
-    "       False,  True, False,  True, False, False, False, False, False,\n",
-    "        True, False, False, False, False, False, False,  True, False,\n",
-    "       False, False, False, False, False])"
+    "sum(numbers_np_array == 1)"
    ]
   }
  ],
