--- a/loops/loops_(good).ipynb
+++ b/loops/loops_(good).ipynb
@@ -17,6 +17,127 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5576f0da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 'break' and 'continue' interrupt flow of loop within loop\n",
+    "# example 1\n",
+    "# 'for' loop\n",
+    "\n",
+    "for i in range(10):\n",
+    "    if i > 6: break\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f024df6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example 2\n",
+    "# 'for' loop\n",
+    "\n",
+    "for i in range(10):\n",
+    "    if i == 6: continue        # Don't proceed further\n",
+    "                               # IN THE CURRENT LOOP\n",
+    "                               # if i == 6\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6820789c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example 3\n",
+    "# 'for' loop\n",
+    "\n",
+    "for i in range(10):\n",
+    "    if i % 2 == 0: continue     # Don't proceed if the remainder is zero\n",
+    "                                # I.e. if the number is even\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "69fe9b58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example 4\n",
+    "# 'while' loop\n",
+    "\n",
+    "number=0\n",
+    "\n",
+    "while True:\n",
+    "    print(number)\n",
+    "    number += 1\n",
+    "    if number > 4: break"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a6ae401a",
    "metadata": {},
@@ -34,13 +155,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8833b6e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Your code here\n",
+    "# this creates list with numbers from 0 to 9\n",
+    "[number for number in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6c22e60d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# similar to 'for' loop\n",
+    "# put things as output at the front\n",
+    "# so, to create a list of squares :>\n",
     "\n",
-    "# Your code here\n"
+    "[number**2 for number in range(10)]"
    ]
   },
   {
@@ -53,13 +211,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0c766ef7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "# Your code here\n"
+    "# Your code here\n",
+    "# specifying specific condition\n",
+    "[number for number in range(10) if number % 2 ==0]"
    ]
   },
   {
@@ -80,13 +250,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f7f58d92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 1, y = 2, z = 3\n"
+     ]
+    }
+   ],
    "source": [
+    "# Your code here\n",
+    "# unpacking in python\n",
     "\n",
-    "# Your code here\n"
+    "x, y, z=[1, 2, 3]\n",
+    "print(f'x = {x}, y = {y}, z = {z}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "741a4a93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# unpacking is good for 2D list\n",
+    "# combine unpacking with a 'for' loop looks like this:\n",
+    "\n",
+    "py_superhero_info=[['Natasha Romanoff', 'Black Widow'],\n",
+    "                     ['Tony Stark', 'Iron Man'],\n",
+    "                     ['Stephen Strange', 'Doctor Strange']]\n",
+    "\n",
+    "for real_name, super_name in py_superhero_info:\n",
+    "    print(f\"{real_name} is Marvel's {super_name}!\")\n",
+    "    \n",
+    "# I'm guessing in the 'for' line\n",
+    "# sets real_name to the first set of names in the list\n",
+    "# and sets super_name to the second set of names in the list"
    ]
   },
   {
@@ -99,13 +312,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d1caf0bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
    "source": [
+    "# Your code here\n",
+    "# zip() can combine 2 lists too!\n",
     "\n",
-    "# Your code here\n"
+    "super_names = [\"Black Widow\", \"Iron Man\", \"Doctor Strange\"]\n",
+    "real_names = [\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]\n",
+    "\n",
+    "for real_name, super_name in zip(real_names,super_names):\n",
+    "    print(f\"{real_name} is Marvel's {super_name}!\")\n",
+    "    \n",
+    "# most elegant solution :>"
    ]
   },
   {
@@ -118,13 +349,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8fa544ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
    "source": [
+    "# Your code here\n",
+    "# 'for' loop through dictionaries\n",
     "\n",
-    "# Your code here\n"
+    "superhero_info={\"Natasha Romanoff\": \"Black Widow\",\n",
+    "                \"Tony Stark\": \"Iron Man\",\n",
+    "                \"Stephen Strange\": \"Doctor Strange\"}\n",
+    "\n",
+    "for key, value in superhero_info.items():\n",
+    "    print(f\"{key} is Marvel's {value}!\")\n",
+    "    \n",
+    "# I'm guessing that\n",
+    "# key is the first set of data in the list\n",
+    "# value is the second set of data in the list\n",
+    "\n",
+    "# 'hidden' function items() spits out both key and corresponding value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ed670692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in superhero_info.keys():\n",
+    "    value = superhero_info[key]\n",
+    "    print(f\"{key} is Marvel's {value}!\")\n",
+    "    \n",
+    "# can also access the key via setting value\n",
+    "# but I think previous one easier\n",
+    "\n",
+    "# 'key' and 'values' are the roles in the dictionary\n",
+    "# 'real_name' and 'super_name' is preferred"
    ]
   },
   {
@@ -137,17 +419,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "66ec4223",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 25, 49, 81]\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# Your solution here\n",
+    "# 'for' loop with range() and 'continue'\n",
+    "# generate list of squares of odd integers from 0 to 9 \n",
     "\n",
-    "\n"
+    "list = []\n",
+    "for i in range(10):\n",
+    "    if i % 2 == 0: continue     # Don't proceed if i % 2 == 0\n",
+    "    list.append(i**2)\n",
+    "print(list)"
    ]
   },
   {
@@ -160,17 +453,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "a3d5fcf4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 9, 25, 49, 81]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# Your solution here\n",
+    "# redo previous exercise using list comprehension\n",
     "\n",
-    "\n"
+    "[number**2 for number in range(10) if number % 2 == 1 ]\n"
    ]
   },
   {
@@ -183,17 +485,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "3418030e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.66 µs ± 287 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
+    "%%timeit\n",
+    "list = []\n",
+    "for i in range(10):\n",
+    "    if i % 2 == 0: continue     \n",
+    "    list.append(i**2)\n",
     "\n",
-    "\n",
-    "\n",
-    "# Your solution here\n",
-    "\n",
-    "\n"
+    "# use cell magic command %%timeit to time previous solutions\n",
+    "# which one faster?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "a733dc14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.29 µs ± 35.3 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "[number**2 for number in range(10) if number % 2 == 1 ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6774c15f",
+   "metadata": {},
+   "source": [
+    "list comprehension is faster"
    ]
   }
  ],
