--- a/loops/loops_(need).ipynb
+++ b/loops/loops_(need).ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "47115ae9",
    "metadata": {},
    "outputs": [
@@ -353,24 +353,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "4\n",
-      "9\n",
-      "16\n",
-      "25\n",
-      "36\n",
-      "49\n",
-      "64\n",
-      "81\n"
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
      ]
     }
    ],
    "source": [
     "# Your solution here\n",
     "# use 'for' loop with 'range()' to generate list of squares of the first ten integers (0 to 9) from zero\n",
+    "list = []\n",
     "for i in range(10):\n",
-    "    print(i**2)"
+    "    list.append(i**2)\n",
+    "print(list)"
    ]
   },
   {
@@ -383,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "f079c7cc",
    "metadata": {},
    "outputs": [
@@ -391,19 +384,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "9\n",
-      "25\n",
-      "49\n",
-      "81\n"
+      "[1, 9, 25, 49, 81]\n"
      ]
     }
    ],
    "source": [
     "# Your solution here\n",
     "# only the squares of the odd numbers from 0 to 9\n",
+    "list = []\n",
     "for i in range(1, 10, 2):\n",
-    "    print(i**2)\n",
+    "    list.append(i**2)\n",
+    "print(list)\n",
     "# adjust the starting of range() is the first number\n",
     "# adjust the end of range() is the middle number\n",
     "# adjust the step of range() is the last number"
@@ -419,30 +410,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "28c2b80c",
+   "execution_count": 2,
+   "id": "c1174b56",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "9\n",
-      "25\n",
-      "49\n",
-      "81\n"
+      "[1, 9, 25, 49, 81]\n"
      ]
     }
    ],
    "source": [
     "# Your solution here\n",
+    "\n",
+    "list = []\n",
     "number = 0\n",
     "\n",
     "while number < 10:\n",
-    "    if number%2 == 1:\n",
-    "        print(number**2)\n",
-    "    number += 1 "
+    "    if number % 2 == 1:\n",
+    "        list.append(number**2)\n",
+    "    number += 1\n",
+    "\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b26a9b2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thank you yuuki\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"thank you yuuki\")\n",
+    "\n",
+    "# testing to see if the code is running\n",
+    "# cus it wasn't when I tried this ;-;"
    ]
   }
  ],
