--- a/loops/loops_(good).ipynb
+++ b/loops/loops_(good).ipynb
@@ -272,6 +272,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "0de4fb6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 1, y = 4, z = 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, _, _, y, z, _ = [1, 2, 3, 4, 5, 6]\n",
+    "print(f'x = {x}, y = {y}, z = {z}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "741a4a93",
    "metadata": {},
@@ -419,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "id": "66ec4223",
    "metadata": {},
    "outputs": [
@@ -436,11 +455,11 @@
     "# 'for' loop with range() and 'continue'\n",
     "# generate list of squares of odd integers from 0 to 9 \n",
     "\n",
-    "list = []\n",
+    "answer = []\n",
     "for i in range(10):\n",
     "    if i % 2 == 0: continue     # Don't proceed if i % 2 == 0\n",
-    "    list.append(i**2)\n",
-    "print(list)"
+    "    answer.append(i**2)\n",
+    "print(answer)"
    ]
   },
   {
