--- a/loops/loops_(need).ipynb
+++ b/loops/loops_(need).ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f079c7cc",
    "metadata": {},
    "outputs": [
@@ -391,10 +391,10 @@
    "source": [
     "# Your solution here\n",
     "# only the squares of the odd numbers from 0 to 9\n",
-    "list = []\n",
+    "answer = []\n",
     "for i in range(1, 10, 2):\n",
-    "    list.append(i**2)\n",
-    "print(list)\n",
+    "    answer.append(i**2)\n",
+    "print(answer)\n",
     "# adjust the starting of range() is the first number\n",
     "# adjust the end of range() is the middle number\n",
     "# adjust the step of range() is the last number"
@@ -425,15 +425,39 @@
    "source": [
     "# Your solution here\n",
     "\n",
-    "list = []\n",
+    "answer = []\n",
     "number = 0\n",
     "\n",
     "while number < 10:\n",
     "    if number % 2 == 1:\n",
-    "        list.append(number**2)\n",
+    "        answer.append(number**2)\n",
     "    number += 1\n",
     "\n",
-    "print(list)"
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "08155899",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16, 36, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = []\n",
+    "number = 0\n",
+    "\n",
+    "while number < 10:\n",
+    "    answer.append(number**2)\n",
+    "    number += 2\n",
+    "print(answer)"
    ]
   },
   {
