--- a/storing data/storing_data_(need).ipynb
+++ b/storing data/storing_data_(need).ipynb
@@ -1099,6 +1099,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3379ff6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Natasha Romanoff': 'BLACK WIDOW', 'Tony Stark': 'IRON MAN', 'Stephen Strange': 'DOCTOR STRANGE'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "superhero_info = {\"Natasha Romanoff\": \"Black Widow\",\n",
+    "                  \"Tony Stark\": \"Iron Man\",\n",
+    "                  \"Stephen Strange\": \"Doctor Strange\"\n",
+    "                  }\n",
+    "\n",
+    "for x in superhero_info:       # x is just a suggestion, can use other alternative to define\n",
+    "    superhero_info[x] = superhero_info[x].upper()    \n",
+    "print(superhero_info)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f37631e4",
    "metadata": {},
