--- a/storing data/storing_data_(need).ipynb
+++ b/storing data/storing_data_(need).ipynb
@@ -1118,7 +1118,7 @@
     "                  \"Stephen Strange\": \"Doctor Strange\"\n",
     "                  }\n",
     "\n",
-    "for x in superhero_info:       # x is just a suggestion, can use other alternative to define\n",
+    "for x in superhero_info:       # x is just a suggestion, can use other alternatives to define\n",
     "    superhero_info[x] = superhero_info[x].upper()    \n",
     "print(superhero_info)"
    ]
