--- a/functions/functions_(need).ipynb
+++ b/functions/functions_(need).ipynb
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "id": "2dde217c",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
      "output_type": "stream",
      "text": [
       "Hello Batman! So, nice to meet you!\n",
-      "None\n"
+      "Hello Kiwi!\n"
      ]
     }
    ],
