--- a/functions/functions_(need).ipynb
+++ b/functions/functions_(need).ipynb
@@ -795,20 +795,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "dec3d900",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'all'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m exit()\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m/\u001b[39m y\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdivide\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[1;32mIn[24], line 5\u001b[0m, in \u001b[0;36mdivide\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdivide\u001b[39m(x, y):\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43my\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mall\u001b[49m() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m exit()\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m/\u001b[39m y\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'all'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "1.0\n"
      ]
     }
    ],
@@ -817,13 +814,19 @@
     "y = 2\n",
     "\n",
     "def divide(x, y):\n",
-    "    if y.all() == 0:\n",
+    "    print(isinstance(x, (int, float, list)))\n",
+    "    print(isinstance(y, (int, float, list)))\n",
+    "    if y == 0:\n",
     "        return exit()\n",
     "    return x / y\n",
     "print(divide(x, y))\n",
     "\n",
+    "\n",
     "# x.all() or x.any() works for arrays (and list?)\n",
-    "# doesn't work if u define x and y by a single element"
+    "# doesn't work if u define x and y by a single element\n",
+    "\n",
+    "# using isinstance() to check\n",
+    "# such that it can accept integers, floats and arrays"
    ]
   },
   {
