--- a/functions/functions_(good).ipynb
+++ b/functions/functions_(good).ipynb
@@ -732,9 +732,9 @@
     "\n",
     "def divide(x, y):\n",
     "    try:\n",
-    "        if y.all() != 0:\n",
-    "            answer = x / y\n",
-    "            print(answer)\n",
+    "        y.all() != 0\n",
+    "        answer = x / y\n",
+    "        print(answer)\n",
     "    except:\n",
     "        print(\"dividing by zero -.-\")\n",
     "\n",
