--- a/Just Exercises (I)/just_exercises_(i).ipynb
+++ b/Just Exercises (I)/just_exercises_(i).ipynb
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "7b10dedc",
+   "id": "6d2a06b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "e3eb19b2",
+   "id": "e95e539a",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "17943a7d",
+   "id": "756bd3a9",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "9995fc80",
+   "id": "a3b7817d",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "ca84f7cd",
+   "id": "1d59fdec",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "ad186100",
+   "id": "e961a70a",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "caab64e6",
+   "id": "a5bae72c",
    "metadata": {},
    "outputs": [
     {
@@ -439,15 +439,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "84e18292",
+   "execution_count": 190,
+   "id": "c04c2c26",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PASSIONFRUIT\n"
+      "['apple', 'banana', 'PINEAPPLE', 'jackfruit', 'PEACH', 'durian', 'watermelon', 'mango', 'strawberry', 'PASSIONFRUIT']\n"
      ]
     }
    ],
@@ -456,15 +456,21 @@
     "# names in lowercase\n",
     "# name with 'p' in uppercase\n",
     "\n",
+    "fruits = [\"apple\", \"banana\", \"pineapple\", \"jackfruit\",\n",
+    "        \"peach\", \"durian\", \"watermelon\", \"mango\",\n",
+    "        \"strawberry\", \"passionfruit\"]\n",
+    "\n",
     "answer = []\n",
     "\n",
     "for start_letter in fruits:\n",
     "    if start_letter[0] == 'p':\n",
-    "        answer = fruit.upper()\n",
+    "        answer.append(start_letter.upper())\n",
     "    else:\n",
-    "        answer = fruit.lower()\n",
+    "        answer.append(start_letter.lower())\n",
     "\n",
-    "print(answer)"
+    "print(answer)\n",
+    "\n",
+    "# err it worked? but do I need an f-string here?"
    ]
   },
   {
